# CharServerProj

./: README.md
ChatServer/: CMakeLists.txt
ChatServer/conf/: config.ini
ChatServer/doc/: README.md
ChatServer/include/: CallData.h  ChatGrpcClient.h  ChatGrpcServerImpl.h  Const.h  DistLock.h  IOContextPool.h  LogicSystem.h  MsgNode.h  MysqlMgr.h  MysqlPool.hpp  Server.h  Session.h  Singleton.h  UserMgr.h
ChatServer/include/grpc_cpp_out/: ChatServer.Chat.grpc.pb.h  GateServer.Status.pb.cc
ChatServer/proto/: GateServer.Status.proto
ChatServer/src/: CallData.cpp  ChatGrpcClient.cpp  ChatGrpcServerImpl.cpp  ChatServer.cpp  DistLock.cpp  LogicSystem.cpp  MysqlMgr.cpp  Server.cpp  Session.cpp  UserMgr.cpp
ChatServer2/: CMakeLists.txt
ChatServer2/conf/: config.ini
ChatServer2/include/: CallData.h  Const.h  LogicSystem.h  LoginGrpcClient.h  RedisMgr.h  Session.h
ChatServer2/include/grpc_cpp_out/: ChatServer.Chat.grpc.pb.cc  ChatServer.Chat.grpc.pb.h  ChatServer.Chat.pb.cc  ChatServer.Chat.pb.h
ChatServer2/src/: CallData.cpp  ChatGrpcClient.cpp  ChatGrpcServerImpl.cpp  IOContextPool.cpp  LogicSystem.cpp  MsgNode.cpp  RedisMgr.cpp  UserMgr.cpp
ChatServer3/: CMakeLists.txt
ChatServer3/conf/: config.ini
ChatServer3/include/: ChatGrpcServerImpl.h  GrpcConPool.hpp  MysqlMgr.h  MysqlPool.hpp  Server.h  Session.h
ChatServer3/include/grpc_cpp_out/: ChatServer.Chat.grpc.pb.cc  ChatServer.Chat.pb.cc  ChatServer.Chat.pb.h  GateServer.Status.grpc.pb.cc  GateServer.Status.grpc.pb.h  GateServer.Status.pb.h
ChatServer3/proto/: ChatServer.Chat.proto
ChatServer3/src/: CallData.cpp  ChatServer.cpp  LoginGrpcClient.cpp  Server.cpp  Session.cpp
GateServer/: CMakeLists.txt
GateServer/cmake/: CMakeLists.txt
GateServer/cmake_debug/: CMakeLists.txt
GateServer/conf/: config.ini
GateServer/doc/: README.md
GateServer/include/: CServer.h  Const.h  GateServer.Varify.grpc.pb.cc  GateServer.Varify.grpc.pb.h  GateServer.Varify.pb.cc  GateServer.Varify.pb.h  HttpConnection.h  IOServicePool.h  LogicSystem.h  MysqlMgr.h  MysqlPool.hpp  StatusGrpcClient.h  VarifyGrpcClient.h
GateServer/include/grpc_cpp_out/: GateServer.Status.grpc.pb.cc  GateServer.Status.pb.h
GateServer/proto/: GateServer.Varify.proto
GateServer/src/: CServer.cpp  GateServer.cpp  HttpConnection.cpp  IOServerPool.cpp  LogicSystem.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  VarifyGrpcClient.cpp
StatusServer/: CMakeLists.txt
StatusServer/conf/: config.ini
StatusServer/doc/: README.md
StatusServer/include/: Calldata.h  Const.h  RedisMgr.h  StatusServerImpl.h
StatusServer/include/grpc_cpp_out/: GateServer.Status.grpc.pb.h  GateServer.Status.pb.cc
StatusServer/proto/: GateServer.Status.proto
StatusServer/src/: Calldata.cpp  StatusServer.cpp  StatusServerImpl.cpp
VarifyServer/: config.js  config.json  const.js  dump.rdb  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
